tests/fail/net6.stderr
error: invalid address: invalid IPv6 address syntax
 --> tests/fail/net6.rs:4:19
  |
4 |     let _ = net6!("2001:db8::32::23/129");
  |                   ^^^^^^^^^^^^^^^^^^^^^^

error: invalid prefix
 --> tests/fail/net6.rs:5:19
  |
5 |     let _ = net6!("2001:db8::32:23/129");
  |                   ^^^^^^^^^^^^^^^^^^^^^
